# cpp_libsdl3_script_luajit_sol3_embed

./: .gitignore  .luarc.json  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  REFACTORING.md
docs/: prompts.txt
docs/plan/: README.md  text-widget-plan.md
scripts/: main.lua  test_phase2.lua  test_phase3.lua
src/: Application.hpp  main.cpp
src/events/: EventHandler.cpp  EventHandler.hpp
src/graphics/: FontManager.cpp  FontManager.hpp
src/lua/: LuaBindings.cpp  LuaBindings.hpp
src/widgets/: TextWidget.cpp  TextWidget.hpp
